welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: illegal start of simple expression
def move(nbPas : Int, versLAvant : Boolean):Int =,Boolean =
                                                 ^